# openbox-temporal-sdk-python

./: .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  repomix-output.xml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: image-security.yml  pr-governance.yml  pr-quality.yml  pr-security.yml  publish.yml  scorecards.yml  slsa-generator.yml  sonarqube.yaml
docs/: changelog-hook-level-governance.md  code-standards.md  codebase-summary.md  configuration.md  project-overview-pdr.md  system-architecture.md  temporal-plugin-integration-guide.md
openbox/: __init__.py  activities.py  activity_interceptor.py  client.py  config.py  context_propagation.py  db_governance_hooks.py  errors.py  file_governance_hooks.py  hitl.py  hook_governance.py  http_governance_hooks.py  otel_setup.py  plugin.py  span_processor.py  tracing.py  types.py  verdict_handler.py  worker.py  workflow_interceptor.py
tests/: __init__.py  conftest.py  test_activities.py  test_activity_interceptor.py  test_config.py  test_db_governance_hooks.py  test_file_governance_hooks.py  test_http_body_truncation.py  test_otel_setup.py  test_plugin.py  test_plugin_integration.py  test_psycopg2_hooks_verify.py  test_span_processor.py  test_tracing.py  test_types.py  test_worker.py  test_workflow_interceptor.py
