[project]
name = "openbox-sdk"
version = "0.1.0"
description = "OpenBox SDK - Governance and observability for Temporal workflows"
authors = [
    { name = "OpenBox Team" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["temporal", "workflow", "governance", "observability", "opentelemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "temporalio>=1.8.0,<2",
    "httpx>=0.28.0,<1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-urllib3>=0.59b0",
    "opentelemetry-instrumentation-urllib>=0.59b0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.10",
    "opentelemetry-instrumentation-psycopg2>=0.59b0",
]
postgres-async = [
    "asyncpg>=0.29.0",
    "opentelemetry-instrumentation-asyncpg>=0.59b0",
]
mysql = [
    "mysql-connector-python>=8.0.0",
    "opentelemetry-instrumentation-mysql>=0.59b0",
]
pymysql = [
    "pymysql>=1.0.0",
    "opentelemetry-instrumentation-pymysql>=0.59b0",
]
mongodb = [
    "pymongo>=4.0.0",
    "opentelemetry-instrumentation-pymongo>=0.59b0",
]
redis = [
    "redis>=5.0.0",
    "opentelemetry-instrumentation-redis>=0.59b0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
]
all-databases = [
    "openbox-sdk[postgres,postgres-async,mysql,pymysql,mongodb,redis,sqlalchemy]",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.26.0,<0.27",
    "black~=23.7",
    "isort~=5.12",
    "mypy>=1.16.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
check_untyped_defs = true

[tool.isort]
profile = "black"
